# toySLAM

./: .gitignore  CMakeLists.txt  README.md
config/: default.yaml
include/: vo_frontend.h
include/toyslam/: camera.h  common_include.h  config.h  data_stereo.h  evaluate_trajectory.h  feature.h  frame.h  vo_ba.h  vo_frontend.h
src/: config.cpp  data_stereo.cpp  vo_ba.cpp  vo_frontend.cpp
test/src/: evaluate_trajectory.cpp  test_data_loader.cpp  test_vo.cpp  test_vo_frontend.cpp
